--- a/Pages/disaster/profile/entrylog/Index.cshtml
+++ b/Pages/disaster/profile/entrylog/Index.cshtml
@@ -178,7 +178,6 @@
 						</ol>
 					</nav>
 				</div>
-
 				<form method="POST" id="checkOut" style="padding: 0px;">
 					<input type="hidden" name="centerLogID" value="@Model.logInfo.centerLogID" />
 					<!-- Title, Check-In and Check-Out Buttons -->
@@ -190,21 +189,24 @@
 									<h1>Entry Log</h1>
 								</div>
 
-								<div class="col-auto d-flex justify-content-between align-items-center" style="gap: 5px">
-									<a id="checkInButton" class="btn btn-primary mb-2 d-none d-sm-inline" href="/disaster/profile/entrylog/checkin?centerLogID=@Model.logInfo.centerLogID">
-										<i class="bi bi-check-circle pt" style="padding: 5px;"></i> Check-in Evacuee
-									</a>
-									<a id="checkInButtonSmall" class="btn btn-primary mb-2 d-sm-none" href="/disaster/profile/entrylog/checkin?centerLogID=@Model.logInfo.centerLogID">
-										<i class="bi bi-check-circle pt" style="padding: 5px;"></i>
-									</a>
+								@if (Model.UserType != "LGU Staff")
+								{
+									<div class="col-auto d-flex justify-content-between align-items-center" style="gap: 5px">
+										<a id="checkInButton" class="btn btn-primary mb-2 d-none d-sm-inline" href="/disaster/profile/entrylog/checkin?centerLogID=@Model.logInfo.centerLogID">
+											<i class="bi bi-check-circle pt" style="padding: 5px;"></i> Check-in Evacuee
+										</a>
+										<a id="checkInButtonSmall" class="btn btn-primary mb-2 d-sm-none" href="/disaster/profile/entrylog/checkin?centerLogID=@Model.logInfo.centerLogID">
+											<i class="bi bi-check-circle pt" style="padding: 5px;"></i>
+										</a>
 
-									<button id="checkOutButton" style="display: none;" type="button" class="btn btn-danger mb-2 d-none d-sm-inline" name="saveSelection" data-bs-toggle="modal" data-bs-target="#confirmSaveModal" disabled>
-										<i class="bi bi-x-circle pt" style="padding: 5px;"></i> Check-out Evacuee
-									</button>
-									<button id="checkOutButtonSmall" style="display: none;" type="button" class="btn btn-danger mb-2 d-sm-none" name="saveSelectionSmall" data-bs-toggle="modal" data-bs-target="#confirmSaveModal" disabled>
-										<i class="bi bi-x-circle pt" style="padding: 5px;"></i>
-									</button>
-								</div>
+										<button id="checkOutButton" style="display: none;" type="button" class="btn btn-danger mb-2 d-none d-sm-inline" name="saveSelection" data-bs-toggle="modal" data-bs-target="#confirmSaveModal" disabled>
+											<i class="bi bi-x-circle pt" style="padding: 5px;"></i> Check-out Evacuee
+										</button>
+										<button id="checkOutButtonSmall" style="display: none;" type="button" class="btn btn-danger mb-2 d-sm-none" name="saveSelectionSmall" data-bs-toggle="modal" data-bs-target="#confirmSaveModal" disabled>
+											<i class="bi bi-x-circle pt" style="padding: 5px;"></i>
+										</button>
+									</div>
+								}
 							</div>
 						</div>
 					}
@@ -299,12 +301,15 @@
 															</li>
 															@if (@Model.logInfo.status == "Open")
 															{
-																<li>
-																	<a href="#" class="dropdown-item text-danger" onclick="prepareDelete('@item.entryLogID')"
-																	   data-deleteid="@item.entryLogID" data-bs-toggle="modal" data-bs-target="#deleteConfirmationModal">
-																		Delete
-																	</a>
-																</li>
+																@if (Model.UserType != "LGU Staff")
+																{
+																	<li>
+																		<a href="#" class="dropdown-item text-danger" onclick="prepareDelete('@item.entryLogID')"
+																		   data-deleteid="@item.entryLogID" data-bs-toggle="modal" data-bs-target="#deleteConfirmationModal">
+																			Delete
+																		</a>
+																	</li>
+																}
 															}
 															else if (@Model.logInfo.status == "Closed")
 															{
