--- a/Pages/disaster/profile/informationboard/Index.cshtml
+++ b/Pages/disaster/profile/informationboard/Index.cshtml
@@ -368,33 +368,36 @@
 				</div>
 
                 <!-- Close Button -->
-                <form method="POST" id="closeEC" style="padding: 0px;">
-                    <input type="hidden" name="centerLogID" value="@Model.logInfo.centerLogID" />
-                    <input type="hidden" name="disasterID" value="@Model.logInfo.disasterID" />
-                    <input type="hidden" name="centerName" value="@Model.logInfo.centerName" />
-                    <div class="row pb-2">
-                        <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-                            @if (@Model.logInfo.status == "Open")
-                            {
-                                if (@Model.GetRemainingInventoryCount() != 0 || @Model.GetRemainingPackCount() != 0 || @Model.GetRemainingAssessmentCount() != 0)
+                @if (Model.UserType != "EC Staff")
+                {
+                    <form method="POST" id="closeEC" style="padding: 0px;">
+                        <input type="hidden" name="centerLogID" value="@Model.logInfo.centerLogID" />
+                        <input type="hidden" name="disasterID" value="@Model.logInfo.disasterID" />
+                        <input type="hidden" name="centerName" value="@Model.logInfo.centerName" />
+                        <div class="row pb-2">
+                            <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+                                @if (@Model.logInfo.status == "Open")
                                 {
-                                    <button id="completeButton" type="button" class="btn btn-danger mb-2" name="saveSelection" data-bs-toggle="modal" data-bs-target="#confirmSaveModal" disabled>
-                                        <i class="bi bi-x-circle pt" style="padding: 5px;"></i> Close EC
-                                    </button>
+                                    if (@Model.GetRemainingInventoryCount() != 0 || @Model.GetRemainingPackCount() != 0 || @Model.GetRemainingAssessmentCount() != 0)
+                                    {
+                                        <button id="completeButton" type="button" class="btn btn-danger mb-2" name="saveSelection" data-bs-toggle="modal" data-bs-target="#confirmSaveModal" disabled>
+                                            <i class="bi bi-x-circle pt" style="padding: 5px;"></i> Close EC
+                                        </button>
+                                    }
+                                    else
+                                    {
+                                        <button id="completeButton" type="button" class="btn btn-danger mb-2" name="saveSelection" data-bs-toggle="modal" data-bs-target="#confirmSaveModal">
+                                            <i class="bi bi-x-circle pt" style="padding: 5px;"></i> Close EC
+                                        </button>
+                                    }
                                 }
-                                else
+                                else if (@Model.logInfo.status == "Closed")
                                 {
-                                    <button id="completeButton" type="button" class="btn btn-danger mb-2" name="saveSelection" data-bs-toggle="modal" data-bs-target="#confirmSaveModal">
-                                        <i class="bi bi-x-circle pt" style="padding: 5px;"></i> Close EC
-                                    </button>
                                 }
-                            }
-                            else if (@Model.logInfo.status == "Closed")
-                            {
-                            }
+                            </div>
                         </div>
-                    </div>
-                </form>
+                    </form>
+                }
 			</div>
 		</div>
 	</div>
