change add button to sav button

--- a/Pages/family/edit/Member.cshtml
+++ b/Pages/family/edit/Member.cshtml
@@ -269,7 +269,7 @@
 		<!-- Cancel and Save Button -->
 		<div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
 			<a href="/family/profile/index?familyID=@Model.familyInfo.familyID" type="button" class="btn btn-outline-secondary px-4 gap-3">Cancel</a>
-			<button type="button" class="btn btn-primary px-4" id="submitBtn" data-bs-toggle="modal" data-bs-target="#editConfirmationModal">Add</button>
+			<button type="button" class="btn btn-primary px-4" id="submitBtn" data-bs-toggle="modal" data-bs-target="#editConfirmationModal">Save</button>
 		</div>
 
 		<input type="hidden" name="redirectType" id="redirectType" value="" />
