--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -247,7 +247,7 @@
                                 <td width="15%" style="text-align: center;">
                                     @if (@item.status == "Open")
                                     {
-                                        <span class="badge bg-success">@item.status</span>
+                                        <span class="badge rounded-pill bg-success">@item.status</span>
                                     }
                                     else if (@item.status == "Closed")
                                     {
