--- a/Pages/Disaster/Profile/entrylog/Index.cshtml
+++ b/Pages/Disaster/Profile/entrylog/Index.cshtml
@@ -273,7 +273,7 @@
 											<td width="15%" style="text-align: center;">
 												@if (@item.entryStatus == "Check-in")
 												{
-													<span class="badge bg-success">@item.entryStatus</span>
+													<span class="badge rounded-pill bg-success">@item.entryStatus</span>
 												}
 												else if (@item.entryStatus == "Check-out")
 												{
