--- a/Pages/disaster/profile/reliefgoodspack/Index.cshtml
+++ b/Pages/disaster/profile/reliefgoodspack/Index.cshtml
@@ -227,7 +227,7 @@
 									<td width="15%">
 										@if (@item.status == "Distributed")
 										{
-											<span class="badge bg-success">@item.status</span>
+											<span class="badge rounded-pill bg-success">@item.status</span>
 										}
 										else if (@item.status == "Packed")
 										{
