--- a/Pages/disaster/profile/staffassignment/Index.cshtml
+++ b/Pages/disaster/profile/staffassignment/Index.cshtml
@@ -264,7 +264,7 @@
 											<td width="20%">
 												@if (@item.status == "Assigned")
 												{
-													<span class="badge bg-success">@item.status</span>
+													<span class="badge rounded-pill bg-success">@item.status</span>
 												}
 												else if (@item.status == "Completed")
 												{
