--- a/Pages/ecstaff/AssignmentHistory.cshtml
+++ b/Pages/ecstaff/AssignmentHistory.cshtml
@@ -106,7 +106,7 @@
 					<td>
 						@if (@item.status == "Assigned")
 						{
-							<span class="badge bg-success">@item.status</span>
+							<span class="badge rounded-pill bg-success">@item.status</span>
 						}
 						else if (@item.status == "Completed")
 						{
