--- a/Pages/evacuationcenter/Index.cshtml
+++ b/Pages/evacuationcenter/Index.cshtml
@@ -111,7 +111,7 @@
 					<td>
 						@if (@item.status == "Active")
 						{
-							<span class="badge bg-success">@item.status</span>
+							<span class="badge rounded-pill bg-success">@item.status</span>
 						}
 						else if (@item.status == "Inactive")
 						{
